# AntisocialTest

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  run.bat  run.sh
Data/Models/: swatGuy.mtl
Data/Shaders/: shader.frag  shader.vert  skybox.frag  skybox.vert  sprite.frag  sprite.vert
src/: main.cpp
